refactor: 时间转换插件部分修改

--- a/plugins/TimeStamp/index.html
+++ b/plugins/TimeStamp/index.html
@@ -225,6 +225,6 @@
         </div>
       </div>
     </div>
-    <script src="./preload.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
