--- a/plugins/0-hello-world/index.html
+++ b/plugins/0-hello-world/index.html
@@ -9,17 +9,22 @@
   <body>
     <!-- 公共CSS库  -->
     <link
-      href="http://devbit-static.oss-cn-beijing.aliyuncs.com/devbit-static/css/tailwind.min.css"
+      href="http://cdn-static-devbit.csdn.net/devbit-static/css/tailwind.min.css"
       rel="stylesheet"
       type="text/css"
     />
     <link
-      href="http://devbit-static.oss-cn-beijing.aliyuncs.com/devbit-static/css/full.min.css"
+      href="http://cdn-static-devbit.csdn.net/devbit-static/css/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="http://cdn-static-devbit.csdn.net/devbit-static/css/bootstrap.min.css"
       rel="stylesheet"
       type="text/css"
     />
     <!-- 公共JS库 -->
-    <script src="http://devbit-static.oss-cn-beijing.aliyuncs.com/devbit-static/js/vue.min.js"></script>
+    <script src="http://cdn-static-devbit.csdn.net/devbit-static/js/vue.min.js"></script>
 
     <div class="container mx-auto" id="app">
       <h1 class="text-5xl font-extrabold text-gray-900 mt-3 text-center cursor-pointer" @click="add">{{text}}</h1>
